deployment_conv-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment_conv-api
spec:
  selector:
    matchLabels:
      app: conv-api
  template:
    metadata:
      labels:
        environment: api
    spec:
      containers:
      - name: conv_api
        image: antonlarichev/conv-api:1.0
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: api-data
            mountPath: /opt/app/uploads
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
      volumes:
      - name: api-data
        persistentVolumeClaim:  # ← Исправлено: строчные буквы
          claimName: api-pvc
