deployment_conv-app.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: conv-app-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      environment: production
  template:
    metadata:
      labels:
        environment: production
    spec:
      containers:
        - name: conv-app
          image: antonlarichev/conv-app:latest
          ports: 
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
