rmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
      component: rmq
  template:
    metadata:
      name: rmq
      labels:
        component: rmq
    spec:
      containers:
      - name: rmq
        image: rabbitmq:3.9
        ports:
        - containerPort: 5672   # 1. Документирует, что контейнер использует порт 5672
          name: amqp           # 2. Даёт имя для удобства
        - containerPort: 15672  # 3. Помогает инструментам (kubectl port-forward и др.)
          name: management
        resources:
          requests: 
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
        - name: rabbitmq-data
          mountPath: /var/lib/rabbitmq
          subPath: rabbitmq
      volumes:
      - name: rabbitmq-data
        persistentVolumeClaim: 
          claimName: rmq-pvc
