api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-api
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
  selector:
    environment: api
