app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-clusterip
spec:
  type: ClusterIP
  selector:
    environment: production
  ports:
  - port: 80
    protocol: TCP
