rmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    component: rmq  # Это ДОЛЖНО совпадать с labels вашего RabbitMQ Pod
  ports:
  - port: 15672
    protocol: TCP
  type: ClusterIP
