service-converter.yaml
apiVersion: v1
kind: Service
metadata:
  name: converter-service
spec:
  type: ClusterIP
  ports:
  - port: 3333
    protocol: TCP
  selector:
    part: converter
